--- a/src/5_shared/styles/reset.css
+++ b/src/5_shared/styles/reset.css
@@ -127,3 +127,18 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+*::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+*::-webkit-scrollbar-track {
+  margin-right: 10px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #888;
+}
